--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,39 +1,16 @@
-@import "~font-awesome/css/font-awesome.css";
+//@import "~font-awesome/css/font-awesome.css";
+@import '~bootstrap/dist/css/bootstrap.css';
 
-body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  background-color: #232C39;
-  background-image: linear-gradient(45deg, rgba(0, 216, 255, .5) 10%, rgba(0, 1, 127, .7));
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
-  overflow-y: hidden;
+.controls {
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10000;
+  padding: 9px 0 0;
 }
 
-h2 {
-  margin: 0;
-  font-size: 2.25rem;
-  font-weight: bold;
-  letter-spacing: -.025em;
-  color: #fff;
-}
-
-p {
-  font-size: 24px;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  color: white;
-  opacity: .75;
-  text-decoration: none;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-  cursor: pointer;
+.controls-status {
+  display: inline-block;
+  margin: 8px 5px 0;
 }
