--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,16 +1,39 @@
-//@import "~font-awesome/css/font-awesome.css";
 @import '~bootstrap/dist/css/bootstrap.css';
 
-.controls {
-  width: 100vw;
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 10000;
-  padding: 9px 0 0;
+html,
+body,
+#root,
+#app,
+#grid {
+  height: 100%;
+  min-height: 100%;
+}
+#app {
+  overflow: hidden;
 }
 
-.controls-status {
-  display: inline-block;
-  margin: 8px 5px 0;
+:root {
+  --header-height: 55px;
+  --footer-height: 55px;
+}
+
+#grid {
+  display: grid;
+  grid-template-areas: "header" "main" "footer";
+  align-content: space-between;
+}
+#grid-header {
+  grid-area: header;
+  height: var(--header-height);
+}
+#grid-main {
+  grid-area: main;
+  align-self: start;
+  height: calc(100vh - var(--header-height) - var(--footer-height));
+  overflow: hidden;
+  overflow-y: auto;
+}
+#grid-footer {
+  grid-area: footer;
+  height: var(--footer-height);
 }
